# agent

./: .gitignore  Architecture.md  README.md  pyproject.toml
agent/background/: consolidation.py  index_rebuild.py  monitor.py  scheduler.py
agent/core/: classifier.py  config.py  logger.py  orchestrator.py  session.py
agent/interface/: cli.py  palette.py  palette_server.py
agent/llm/: anthropic_client.py  lm_studio.py  prompt_engine.py  router.py  validator.py
agent/memory/: context_builder.py  embedder.py  episodic.py  graph.py  index.py  retrieval.py  search.py  skills.py
agent/tools/: blender_bridge.py  blender_server.py  blender_tools.py  code.py  shell.py  watcher.py
scripts/: init_memory_tree.py  replay_trace.py  session_report.py  verify_blender.py  verify_imports.py  verify_ml.py
tests/: test_anthropic_client.py  test_blender_bridge.py  test_blender_tools.py  test_classifier.py  test_cli.py  test_code.py  test_config.py  test_consolidation.py  test_context_builder.py  test_e2e_smoke.py  test_embedder.py  test_episodic.py  test_graph.py  test_index.py  test_index_rebuild.py  test_lm_studio.py  test_logger.py  test_monitor.py  test_orchestrator.py  test_palette_server.py  test_prompt_engine.py  test_replay_trace.py  test_retrieval.py  test_router.py  test_scheduler.py  test_search.py  test_session.py  test_session_report.py  test_shell.py  test_skills.py  test_validator.py  test_watcher.py
